2002-04-28  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/5280
	* config/io/basic_file_stdio.h (__basic_file::sys_getc): Return int.
	(__basic_file::sys_ungetc): Take int.
	* config/io/basic_file_stdio.cc (__basic_file::sys_ungetc): Same.
	* include/bits/fstream.tcc (basic_filebuf::_M_underflow_common):
	Use sys_getc for unbuffered input.
	* testsuite/27_io/narrow_stream_objects.cc (test06): New.
	
	* src/ios.cc (_M_grow_words): Adjust error checking.
	* testsuite/27_io/ios_base_storage.cc: Same.

2002-04-28  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

	* include/ext/stl_hashtable.h: Import __iterator_category

2002-04-28  Paolo Carlini  <pcarlini@unitus.it>
            Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

	* testsuite/ext/hash_set.cc: New testfile.

2002-04-27  Benjamin Kosnik  <bkoz@redhat.com>

	* config/os/solaris/solaris2.5/bits/os_defines.h: Remove
	_G_USING_THUNKS.
	* config/os/solaris/solaris2.6/bits/os_defines.h: Same.
	* config/os/solaris/solaris2.7/bits/os_defines.h: Same.

2002-04-26  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.h (replace(__pos, __n1, __s, __n2):
	Fix and tighten __throw_length_error check.
	* testsuite/21_strings/replace.cc (test05): New.
	* testsuite/21_strings/replace.cc (test02, test03, test04): Tweak.

2002-04-23  Loren J. Rittle <ljrittle@acm.org>

	* include/std/std_fstream.h (basic_filebuf::sync): Hoist
	unconditional flush on lower-layer handle to here...
	* include/bits/fstream.tcc (basic_filebuf::_M_really_overflow):
	...from here.  Optimize remaining _M_file.sync() call pattern.
	* testsuite/27_io/narrow_stream_objects.cc (test04): New test.
	(test05): Likewise.

2002-04-23  Jason Merrill  <jason@redhat.com>

	* include/bits/fstream.tcc (basic_filebuf::seekoff): Fix for
	output-only filebufs.
	* include/std/std_fstream.h (basic_filebuf::_M_set_indeterminate):
	Likewise.
	(basic_filebuf::_M_set_determinate): Likewise.

	PR libstdc++/6414